# kvm-install-vm

./: .editorconfig  .gitignore  .kivrc  Cargo.toml  LICENSE  README.md  build.rs  deployment.sample.json  kvm-install-vm  test.sh  tips.md  udo  virt-install-centos
scripts/bash/: .kivrc  README.md  kvm-install-vm  test.sh
scripts/bash/tests/: check_destroy.bats  check_distributions.bats  check_script.bats  vmname.bash
src/: cli.rs  cloudinit.rs  config.rs  domain.rs  image.rs  lib.rs  main.rs  vm.rs
tests/: check_custom_images.bats  check_dhcp_release.bats  check_disk_expansion.bats  check_distributions.bats  check_lifecycle.bats  check_options.bats  check_prerequisites.bats  check_remote_images.bats  check_script.bats  cli_tests.rs  cloud_init_tests.rs  config_tests.rs  image_manager_tests.rs  imagedir.bash  integration_test.rs  list_vms.rs  run  setup_suite.bash  vm_tests.rs  vm_tests2.rs  vmdir.bash  vmname.bash
