[package]
name = "kvm-install-vm"
version = "1.0.0-alpha"
edition = "2024"
description = "A tool for creating KVM virtual machines"
authors = ["Giovanni Torres <giovanni.torres@users.noreply.github.com"]
license = "MIT"
repository = "https://github.com/giovtorres/kvm-install-vm"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.3"
indicatif = "0.17"
ipnetwork = "0.20"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
virt = "0.3.1"
