[package]
name = "kvm-install-vm"
version = "1.0.0-alpha"
edition = "2024"
description = "A tool for creating KVM virtual machines"
authors = ["Giovanni Torres <giovanni.torres@users.noreply.github.com"]
license = "MIT"
repository = "https://github.com/giovtorres/kvm-install-vm"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
virt = "0.3.1"

[build-dependencies]
pkg-config = "0.3"