[package]
name = "kvm-install-vm"
version = "1.0.0-alpha"
edition = "2024"
description = "A tool for creating KVM virtual machines"
authors = ["Giovanni Torres <giovanni.torres@users.noreply.github.com"]
license = "MIT"
repository = "https://github.com/giovtorres/kvm-install-vm"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11"
futures-util = "0.3"
indicatif = "0.17"
log = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.19"
toml = "0.8"
virt = "0.4"
tokio = { version = "1.44", features = ["full"] }
tokio-fs = "0.1"

[build-dependencies]
pkg-config = "0.3"